--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,8 @@ a {
   display: block;
   text-align: center;
   color: var(--basic-black);
+  width: 100px;
+  margin-left: 73px;
 }
 
 .site-navigation li {
@@ -279,7 +281,7 @@ a {
 .feature-second-text {
   font-size: 14px;
   font-weight: normal;
-  line-height: 21px;
+  line-height: 22px;
   color: var(--basic-white);
   text-align: center;
   margin: 0 auto;
@@ -296,7 +298,7 @@ a {
   width: 400px;
   color: var(--basic-black);
   text-align: center;
-  padding-top: 64px;
+  padding-top: 62px;
   padding-bottom: 82px;
 }
 
@@ -305,14 +307,14 @@ a {
   font-weight: bold;
   line-height: 21px;
   font-weight: bold;
-  margin: 0 auto 25px;
+  margin: 0 auto 26px;
 }
 
 
 .feature-inner-text {
   font-size: 14px;
   font-weight: normal;
-  line-height: 23px;
+  line-height: 22px;
   margin: 0 auto;
   width: 297px;
 }
@@ -342,14 +344,14 @@ a {
 
 .book-headline {
   font-weight: bold;
-  margin: 0 auto 32px;
+  margin: 0 auto 34px;
 
 }
 
 .book-text {
   font-size: 14px;
   font-weight: normal;
-  line-height: 24px;
+  line-height: 27px;
   text-align: center;
   margin: 0 auto 18px;
   width: 435px;
@@ -467,6 +469,7 @@ a {
   border: none;
   font-size: 14px;
   display: flex;
+  padding-top: 3px;
 }
 
 .link-htmlacademy:hover,
@@ -514,7 +517,7 @@ a {
 .footer-social {
   width: 150px;
   text-align: center;
-  padding-top: 39px;
+  padding-top: 37px;
   margin: 0 auto;
 }
 
@@ -529,9 +532,10 @@ a {
 }
 
 .footer-copyright {
-  padding-top: 49px;
+  height: 37px;
+  padding-top: 44px;
   padding-bottom: 12px;
-  margin: 0 auto 0 67px;
+  margin: 0 auto 0 66px;
 }
 
 .social-button {
@@ -788,6 +792,7 @@ a {
   margin: 0;
   padding: 0;
   margin-top: 29px;
+  margin-bottom: 36px;
   width: 100%;
   align-items: center;
 }
@@ -926,7 +931,7 @@ a {
 
 .hotel-text {
   font-size: 14px;
-  line-height: 26px;
+  line-height: 21px;
   font-weight: normal;
   margin: 0px 9px 15px 0px;
   grid-column: 1/2;
@@ -963,8 +968,9 @@ a {
   text-align: center;
   font-weight: normal;
   background-color: var(--special-grey-rate);
-  padding-top: 6px;
-  margin: 0;
+  padding-top: 11px;
+  padding-left: 10px;
+  margin-top: 5px;
 }
 
 /* Grid */
@@ -1010,9 +1016,6 @@ a {
 }
 
 .hotels {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 150px 150px 150px;
   position: relative;
   width: inherit;
 }
@@ -1021,23 +1024,22 @@ a {
   grid-column: 1/4;
   display: flex;
   align-items: center;
-  min-height: 138px;
+  min-height: 140px;
   padding-left: 73px;
   border-top: 1px solid var(--special-grey-broder);
+  margin-top: 10px;
 }
 
-.hotel {
-  margin-top: 38px;
-}
 
 .hotel:last-child {
   border-bottom: 1px solid var(--special-grey-broder);
+  margin-bottom: 8px;
 }
 
 
 .hotels h2 {
   margin-bottom: 7px;
-  margin-top: 19px;
+  margin-top: 22px;
 }
 
 .hotel-img {
@@ -1145,7 +1147,7 @@ a {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 0;
+  margin: 2px 0;
 }
 
 .quantity-people {
@@ -1165,11 +1167,11 @@ a {
 }
 
 .quantity-children {
-  margin-left: 65px;
+  margin-left: 55px;
 }
 
 .quantity-children input[type=text] {
-  margin-left: 13px;
+  margin-left: 23px;
 }
 
 .quantity-button {
@@ -1213,7 +1215,7 @@ a {
 
 .button-modal {
   width: 458px;
-  height: 56px;
+  height: 57px;
   color: var(--basic-white);
   background-color: var(--basic-blue);
   font-size: 21px;
